# rag-battle

./: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-fix  Dockerfile-refactoring  Dockerfile-tei  Dockerfile-vllm  README.md  db_wrapper.py  main.py  pyproject.toml  pytest.ini  run.sh
.github/workflows/: codestyle-black.yml  codestyle-flake8.yml
docker/: docker-compose-override.yml  docker-compose.yml
rag_battle/: logs.py  server.py
rag_battle/domain/: embeddings_model.py  embeddings_pipeline.py  retriever.py  schemas.py  vector_database.py
rag_battle/infra/embeddings/: __init__.py  mock.py  service.py  tei.py
rag_battle/infra/embeddings/tei/: __init__.py  config.py  exceptions.py  model.py
rag_battle/infra/embeddings/text_embeddings_inference/: README.md  __init__.py  embedding.py  tei_pb2.py  tei_pb2_grpc.py
rag_battle/infra/retrievers/: __init__.py  base.py  mock.py  retriever.py
rag_battle/infra/vector_database/: __init__.py  faiss.py
rag_battle/routers/: __init__.py  schemas.py  v1.py
rag_battle/services/common/: dependencies.py
rag_battle/services/ingestion/: __init__.py  dependencies.py  service.py
rag_battle/services/rag/: __init__.py  dependencies.py  service.py
tests/fixtures/: documents.py  query.py
tests/integration/: test_rag.py  utils.py
tests/unit/: test_embeddings.py
