# TODO: It breaks uv installation in docker by changing
#  `source = { virtual = "." }`
#  to `source = { editable = "." }`
#  in uv.lock
#[build-system]
#requires = [
#    "wheel",
#    "flit"
#]
#build-backend = "flit.buildapi"
[project]
name = "rag_battle"
version = "0.1.0"
description = "RAG evaluation lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13,<3.13",
    "aiostream>=0.7.0,<0.8.0",
    "alembic>=1.16.2,<1.17.0",
    "asyncpg>=0.30.0,<0.31.0",
    "fastapi>=0.116.0,<0.117.0",
    "gunicorn>=23.0.0,<24.0.0",
    "httpx>=0.27.2,<0.28.0",  # update to 0.28.0 breaks AsyncClient
    "loguru>=0.7.3",
    "numpy>=1.26.4,<2.0.0",
    "pgvector>=0.4.1,<0.5.0",
    "protobuf>=4.25.8,<4.26.0",
    "pydantic>=2.11.7,<2.12.0",
    "pydantic-settings>=2.10.1,<2.11.0",
    "python-dotenv>=1.1.1,<1.2.0",
    "redis>=6.2.0,<6.3.0",
    "sqlalchemy>=2.0.41,<2.1.0",
    "uvicorn>=0.35.0,<0.36.0",
    "uvloop>=0.21.0,<0.22.0",
    "httptools>=0.6.4,<0.7.0",
    "websockets>=12.0.0,<13.0.0",
    "faiss-cpu>=1.11.0,<1.12.0",
    "grpcio>=1.73.1,<1.74.0",
    "tenacity>=9.1.2,<9.2.0",
]

# TODO: remove duplication
# Dockefile uses `uv sync` and requires this
[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0,<4.3.0",
    "pytest>=8.3.5,<8.4.0",
    "pytest-asyncio>=0.26.0,<0.27.0",
    "async-asgi-testclient>=1.4.11,<1.5.0",
]
# uv pip install -e .[dev] requires this
[dependency-groups]
dev = [
    "pre-commit>=4.2.0,<4.3.0",
    "pytest>=8.3.5,<8.4.0",
    "pytest-asyncio>=0.26.0,<0.27.0",
    "async-asgi-testclient>=1.4.11,<1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_battle"]